docs(known-issues): extended 11-trial statistical validation confirms b7a1ed84 exoneration
Follow-up to the round-3 heap-corruption investigation (da38b629): ran 8 more
full RequestMappingMessageConversionIntegrationTests trials (11 total) on the
same current-dev-tip binary, per a request for real statistical confidence
beyond the initial 3-trial sample.

Result: 11/11 (100%) completed within the 1200s bound. Wall-clock time
527s-716s (mean ~636s). Corruption-warning count 731-1,962 (mean ~1,199) --
every trial 346x-929x below the pre-fix catastrophic case (679,454 warnings,
non-completion). No trial showed any early-warning signal of an occasional
tip into the pre-fix failure mode.

The 8 extended trials deliberately ran under self-induced 2-3-way parallel
CPU contention to probe load-sensitivity. Confirmed: warning counts averaged
~53% higher under contention (~1,324) vs. isolated (~864) -- the
corruption-detection heuristic does fire somewhat more under scheduling
pressure, as hypothesized -- but even under that adverse condition every
trial still completed comfortably inside the bound.

Also documents an open question: the standard spring-suite-runner does NOT
pass --enable-native-access by default either, so if the independent
verification agent used it as-is, their run should have hit the same
near-instant Class.forName crash this investigation hit first -- not run
14.5 minutes with progress. Flagged for whoever owns that harness to check,
not resolved here.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>